Update CSS to fix certificate img and list items alignment

--- a/src/courseware/course/sequence/lock-paywall-value-prop/LockPaywall.scss
+++ b/src/courseware/course/sequence/lock-paywall-value-prop/LockPaywall.scss
@@ -5,11 +5,13 @@
     .list-item-row {
         display: flex;
         margin-left: -7px;
+        line-height: 1.5rem;
+        padding-left: 5px;
     }
     .certificate-image-banner {
-        width: 166px;
-        height: 119px;
-        margin-top: 3px;
+        width: 172px;
+        height: 123px;
+        margin-top: 6px;
     }
     .certificate-image-banner-container {
         display: inline-block;
